--- a/app/src/main/res/layout/activity_book_list.xml
+++ b/app/src/main/res/layout/activity_book_list.xml
@@ -13,5 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:background="@drawable/list_gradiant"
+        android:backgroundTintMode="add" />
 </LinearLayout>
