--- a/app/src/main/res/layout/book_list_item.xml
+++ b/app/src/main/res/layout/book_list_item.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_weight="1"
-        android:textColor="#FFFFFF"
+        android:textColor="#111111"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
 </LinearLayout>
