Nav drawer added across all activities.

--- a/app/src/main/res/layout/nav_drawer_item.xml
+++ b/app/src/main/res/layout/nav_drawer_item.xml
@@ -6,4 +6,5 @@
     android:layout_gravity="center_vertical"
     android:layout_weight="1"
     android:textColor="#111"
+    android:textSize="32sp"
     android:textAppearance="?android:attr/textAppearanceMedium" />
