Update sign up activity to display back button. Clean up manifest file.

--- a/app/src/main/res/layout/nav_drawer_item.xml
+++ b/app/src/main/res/layout/nav_drawer_item.xml
@@ -7,4 +7,5 @@
     android:layout_weight="1"
     android:textColor="#111"
     android:textSize="32sp"
-    android:textAppearance="?android:attr/textAppearanceMedium" />
+    android:textAppearance="?android:attr/textAppearanceMedium" >
+</TextView>
