--- a/app/src/main/res/layout/book_list_item.xml
+++ b/app/src/main/res/layout/book_list_item.xml
@@ -7,7 +7,7 @@
     android:orientation="horizontal" >
     <TextView
         android:id="@+id/book_description"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center_vertical"
         android:layout_weight="1"
