Fixing Class names

--- a/app/src/main/res/layout/nav_drawer_item.xml
+++ b/app/src/main/res/layout/nav_drawer_item.xml
@@ -3,7 +3,9 @@
     android:id="@+id/nav_drawer_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="center_vertical"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    android:gravity="left"
     android:layout_weight="1"
     android:textColor="#111"
     android:textSize="32sp"
