--- a/app/src/main/res/layout/activity_query_list_adapter.xml
+++ b/app/src/main/res/layout/activity_query_list_adapter.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.commet.booker.ListAdapter">
+    tools:context=".QueryListAdapter">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -21,6 +21,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_list_adapter" />
+    <include layout="@layout/content_query_list_adapter" />
 
 </android.support.design.widget.CoordinatorLayout>
