--- a/app/src/main/res/layout/content_single_book_adapter.xml
+++ b/app/src/main/res/layout/content_single_book_adapter.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,15 +12,37 @@
     tools:context="com.example.commet.booker.SingleBookAdapter"
     tools:showIn="@layout/activity_single_book_adapter">
 
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Large Text"
             android:id="@+id/bookTitle"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_row="0"
+            android:layout_column="0" />
+
+        <ImageView
+            android:layout_width="228dp"
+            android:layout_height="228dp"
+            android:id="@+id/bookImage"
+            android:layout_row="1"
+            android:layout_column="0" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Medium Text"
+            android:id="@+id/bookIsbn"
+            android:layout_row="2"
+            android:layout_column="0" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -28,10 +50,8 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Medium Text"
             android:id="@+id/bookDescription"
-            android:layout_marginTop="126dp"
-            android:layout_below="@+id/bookTitle"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_row="3"
+            android:layout_column="0" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -39,9 +59,8 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Medium Text"
             android:id="@+id/bookAuthor"
-            android:layout_below="@+id/bookDescription"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_row="4"
+            android:layout_column="0" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -49,7 +68,8 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Medium Text"
             android:id="@+id/bookPubDate"
-            android:layout_below="@+id/bookAuthor" />
+            android:layout_row="5"
+            android:layout_column="0" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -57,30 +77,17 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Medium Text"
             android:id="@+id/bookPub"
-            android:layout_below="@+id/bookPubDate"
-            android:layout_alignRight="@+id/bookPubDate"
-            android:layout_alignEnd="@+id/bookPubDate" />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/bookImage"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/bookTitle"
-            android:layout_alignRight="@+id/bookDescription"
-            android:layout_alignEnd="@+id/bookDescription" />
+            android:layout_row="6"
+            android:layout_column="0" />
 
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Post To Account"
+            android:text="Submit Book"
             android:id="@+id/bookSubmit"
-            android:layout_marginBottom="55dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"/>
+            android:layout_row="8"
+            android:layout_column="0" />
 
-</RelativeLayout>
+    </GridLayout>
+
+</ScrollView>
