All activity XMLs have been refactored to be in one layout file.

--- a/app/src/main/res/layout/activity_book_list.xml
+++ b/app/src/main/res/layout/activity_book_list.xml
@@ -20,7 +20,9 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:backgroundTintMode="add" />
+            android:backgroundTintMode="add"
+            android:smoothScrollbar="false"
+            android:scrollingCache="true"/>
     </RelativeLayout>
     <ListView
         android:id="@+id/left_drawer"
