Modified userprofile to add user and all queries.

--- a/app/src/main/res/layout/activity_query_form.xml
+++ b/app/src/main/res/layout/activity_query_form.xml
@@ -66,22 +66,38 @@
                 android:layout_height="wrap_content"
                 android:text="Verify"
                 android:id="@+id/querySearchBtn"
-                android:layout_below="@+id/queryIsbn"
+                android:layout_marginTop="17dp"
+                android:layout_below="@+id/emailText"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true" />
+                android:layout_alignRight="@+id/emailText"
+                android:layout_alignEnd="@+id/emailText" />
 
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Scan ISBN Barcode"
                 android:id="@+id/scanBtn"
+                android:layout_marginTop="19dp"
                 android:layout_below="@+id/querySearchBtn"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_alignRight="@+id/querySearchBtn"
                 android:layout_alignEnd="@+id/querySearchBtn" />
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="textEmailAddress"
+                android:ems="10"
+                android:id="@+id/emailText"
+                android:layout_below="@+id/queryIsbn"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="20dp"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:hint="Email" />
 
         </RelativeLayout>
 
